--- a/reviews.css
+++ b/reviews.css
@@ -19,7 +19,7 @@
     border: white solid;
     border-radius: 30px;
     height: min-content;
-    text-align: center
+    text-align: center;
 }
 
 .gallery-item__elem img {
@@ -32,4 +32,26 @@
         display: flex;
         flex-direction: column;
     }
+}
+
+.swiper {
+    width: 600px;
+    height: 400px;
+    --swiper-theme-color: darkorange;
+}
+
+.swiper-slide-image {
+    text-align: center;
+    position: relative;
+    z-index: 1;
+}
+
+.swiper-slide-image img {
+    border-radius: 30px;
+    width: 300px;
+    text-align: center;
+}
+
+.swiper-button-next, .swiper-button-prev, .swiper-pagination{
+    color: darkorange;
 }
